SERVER-46876 Compaction interrupts on EBUSY

(cherry picked from commit 0ce2fa7273aa7f4c7170c1bba3944efe46b4f043)